--- a/math.ipynb
+++ b/math.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Math markdown](markdown.ipynb)"
+    "[Math markdown](markdown.ipynb)\n",
+    "\n",
+    "[Линейная алгебра](linear_algebra.ipynb)"
    ]
   },
   {
