Исправления в линейной алгебре

--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -44,19 +44,17 @@
     "\n",
     "Сокращаем:\n",
     "\n",
-    "$a.b = |a||b|\\cos{\\theta}$.\n",
+    "$\\boldsymbol{a.b = |a||b|\\cos{\\theta}}$.\n",
     "\n",
     "#### Проекция векторов\n",
     "\n",
     "![Image](https://upload.wikimedia.org/wikipedia/commons/9/98/Projection_and_rejection.png)\n",
     "\n",
-    "$|a_1| = |a|\\cos{\\theta}$\n",
+    "$|a_1| = |a|\\cos{\\theta}$.\n",
     "\n",
-    "$a.b = |a||b|\\cos{\\theta} => |a_1| = \\frac{a.b}{|b|}$\n",
+    "$a.b = |a||b|\\cos{\\theta} \\Rightarrow \\boldsymbol{|a_1| = \\frac{a.b}{|b|}}$.\n",
     "\n",
-    "Длина единичного вектора b: \n",
-    "\n",
-    "$\\frac{b}{|b|} => a_1 = \\frac{b}{|b|}|a_1| => a_1 = b\\frac{a.b}{|b|^2}$"
+    "$a_1 = \\frac{b}{|b|}|a_1| \\Rightarrow \\boldsymbol{a_1 = b\\frac{a.b}{|b|^2}}$\n"
    ]
   },
   {
