--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -54,7 +54,16 @@
     "\n",
     "$a.b = |a||b|\\cos{\\theta} \\Rightarrow \\boldsymbol{|a_1| = \\frac{a.b}{|b|}}$.\n",
     "\n",
-    "$a_1 = \\frac{b}{|b|}|a_1| \\Rightarrow \\boldsymbol{a_1 = b\\frac{a.b}{|b|^2}}$\n"
+    "$a_1 = \\frac{b}{|b|}|a_1| \\Rightarrow \\boldsymbol{a_1 = b\\frac{a.b}{|b|^2}}$.\n",
+    "\n",
+    "#### Замена базиса\n",
+    "Применимо только если вектора в новом базисе ортогональны. Для замены базиса необходимо определить длину проекций вектора на новые базисные вектора и масштабировать в соответствии их длиной.\n",
+    "\n",
+    "$v = \\begin{bmatrix} v_1 \\\\ . \\\\ .\\\\ v_n \\end{bmatrix}, u_1 = \\begin{bmatrix} u_{11} \\\\ . \\\\ .\\\\ v_{1n} \\end{bmatrix}$ &nbsp; &nbsp; ...&nbsp; &nbsp; $u_n = \\begin{bmatrix} u_{n1} \\\\ . \\\\ .\\\\ v_{nn} \\end{bmatrix}$\n",
+    "\n",
+    "$v^u = \\begin{bmatrix} |v_1^{u_1}| \\\\ . \\\\ .\\\\ |v_n^{u_n}| \\end{bmatrix}$, где:\n",
+    "\n",
+    "$|v_i^{u_i}| = \\frac{a.b}{|b|^2}$"
    ]
   },
   {
